gunit/src/org/antlr/v4/gunit/gUnitParser.java
// $ANTLR 3.2.1-SNAPSHOT Jan 26, 2010 15:12:28 gUnit.g 2010-01-27 17:03:30

package org.antlr.v4.gunit;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class gUnitParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SUITE", "TEST_OK", "TEST_FAIL", "TEST_RETVAL", "TEST_STDOUT", "TEST_TREE", "TEST_ACTION", "DOC_COMMENT", "ID", "OPTIONS", "STRING", "ACTION", "RETVAL", "ML_STRING", "TREE", "FILENAME", "NESTED_RETVAL", "NESTED_AST", "STRING_", "WS", "ID_", "SL_COMMENT", "ML_COMMENT", "XDIGIT", "'gunit'", "';'", "'}'", "'='", "'@header'", "'walks'", "':'", "'OK'", "'FAIL'", "'returns'", "'->'"
    };
    public static final int T__29=29;
    public static final int RETVAL=16;
    public static final int T__28=28;
    public static final int TEST_TREE=9;
    public static final int STRING_=22;
    public static final int NESTED_AST=21;
    public static final int ML_STRING=17;
    public static final int TEST_FAIL=6;
    public static final int ID=12;
    public static final int EOF=-1;
    public static final int NESTED_RETVAL=20;
    public static final int TEST_RETVAL=7;
    public static final int TEST_STDOUT=8;
    public static final int ACTION=15;
    public static final int TEST_OK=5;
    public static final int ML_COMMENT=26;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=23;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int TREE=18;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int FILENAME=19;
    public static final int T__38=38;
    public static final int ID_=24;
    public static final int XDIGIT=27;
    public static final int SL_COMMENT=25;
    public static final int DOC_COMMENT=11;
    public static final int TEST_ACTION=10;
    public static final int SUITE=4;
    public static final int OPTIONS=13;
    public static final int STRING=14;

    // delegates
    // delegators


        public gUnitParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public gUnitParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return gUnitParser.tokenNames; }
    public String getGrammarFileName() { return "gUnit.g"; }


    public static class gUnitDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "gUnitDef"
    // gUnit.g:16:1: gUnitDef : ( DOC_COMMENT )? 'gunit' ID ';' ( optionsSpec | header )* ( testsuite )+ -> ^( 'gunit' ID ( DOC_COMMENT )? ( optionsSpec )? ( header )? ( testsuite )+ ) ;
    public final gUnitParser.gUnitDef_return gUnitDef() throws RecognitionException {
        gUnitParser.gUnitDef_return retval = new gUnitParser.gUnitDef_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token DOC_COMMENT1=null;
        Token string_literal2=null;
        Token ID3=null;
        Token char_literal4=null;
        gUnitParser.optionsSpec_return optionsSpec5 = null;

        gUnitParser.header_return header6 = null;

        gUnitParser.testsuite_return testsuite7 = null;


        CommonTree DOC_COMMENT1_tree=null;
        CommonTree string_literal2_tree=null;
        CommonTree ID3_tree=null;
        CommonTree char_literal4_tree=null;
        RewriteRuleTokenStream stream_DOC_COMMENT=new RewriteRuleTokenStream(adaptor,"token DOC_COMMENT");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_optionsSpec=new RewriteRuleSubtreeStream(adaptor,"rule optionsSpec");
        RewriteRuleSubtreeStream stream_testsuite=new RewriteRuleSubtreeStream(adaptor,"rule testsuite");
        RewriteRuleSubtreeStream stream_header=new RewriteRuleSubtreeStream(adaptor,"rule header");
        try {
            // gUnit.g:17:2: ( ( DOC_COMMENT )? 'gunit' ID ';' ( optionsSpec | header )* ( testsuite )+ -> ^( 'gunit' ID ( DOC_COMMENT )? ( optionsSpec )? ( header )? ( testsuite )+ ) )
            // gUnit.g:17:4: ( DOC_COMMENT )? 'gunit' ID ';' ( optionsSpec | header )* ( testsuite )+
            {
            // gUnit.g:17:4: ( DOC_COMMENT )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==DOC_COMMENT) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // gUnit.g:17:4: DOC_COMMENT
                    {
                    DOC_COMMENT1=(Token)match(input,DOC_COMMENT,FOLLOW_DOC_COMMENT_in_gUnitDef67);  
                    stream_DOC_COMMENT.add(DOC_COMMENT1);


                    }
                    break;

            }

            string_literal2=(Token)match(input,28,FOLLOW_28_in_gUnitDef70);  
            stream_28.add(string_literal2);

            ID3=(Token)match(input,ID,FOLLOW_ID_in_gUnitDef72);  
            stream_ID.add(ID3);

            char_literal4=(Token)match(input,29,FOLLOW_29_in_gUnitDef74);  
            stream_29.add(char_literal4);

            // gUnit.g:17:32: ( optionsSpec | header )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==OPTIONS) ) {
                    alt2=1;
                }
                else if ( (LA2_0==32) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // gUnit.g:17:33: optionsSpec
            	    {
            	    pushFollow(FOLLOW_optionsSpec_in_gUnitDef77);
            	    optionsSpec5=optionsSpec();

            	    state._fsp--;

            	    stream_optionsSpec.add(optionsSpec5.getTree());

            	    }
            	    break;
            	case 2 :
            	    // gUnit.g:17:45: header
            	    {
            	    pushFollow(FOLLOW_header_in_gUnitDef79);
            	    header6=header();

            	    state._fsp--;

            	    stream_header.add(header6.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // gUnit.g:17:54: ( testsuite )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=DOC_COMMENT && LA3_0<=ID)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // gUnit.g:17:54: testsuite
            	    {
            	    pushFollow(FOLLOW_testsuite_in_gUnitDef83);
            	    testsuite7=testsuite();

            	    state._fsp--;

            	    stream_testsuite.add(testsuite7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);



            // AST REWRITE
            // elements: header, optionsSpec, 28, testsuite, DOC_COMMENT, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 18:6: -> ^( 'gunit' ID ( DOC_COMMENT )? ( optionsSpec )? ( header )? ( testsuite )+ )
            {
                // gUnit.g:18:9: ^( 'gunit' ID ( DOC_COMMENT )? ( optionsSpec )? ( header )? ( testsuite )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_28.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                // gUnit.g:18:22: ( DOC_COMMENT )?
                if ( stream_DOC_COMMENT.hasNext() ) {
                    adaptor.addChild(root_1, stream_DOC_COMMENT.nextNode());

                }
                stream_DOC_COMMENT.reset();
                // gUnit.g:18:35: ( optionsSpec )?
                if ( stream_optionsSpec.hasNext() ) {
                    adaptor.addChild(root_1, stream_optionsSpec.nextTree());

                }
                stream_optionsSpec.reset();
                // gUnit.g:18:48: ( header )?
                if ( stream_header.hasNext() ) {
                    adaptor.addChild(root_1, stream_header.nextTree());

                }
                stream_header.reset();
                if ( !(stream_testsuite.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_testsuite.hasNext() ) {
                    adaptor.addChild(root_1, stream_testsuite.nextTree());

                }
                stream_testsuite.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "gUnitDef"

    public static class optionsSpec_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "optionsSpec"
    // gUnit.g:21:1: optionsSpec : OPTIONS ( option ';' )+ '}' -> ^( OPTIONS ( option )+ ) ;
    public final gUnitParser.optionsSpec_return optionsSpec() throws RecognitionException {
        gUnitParser.optionsSpec_return retval = new gUnitParser.optionsSpec_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token OPTIONS8=null;
        Token char_literal10=null;
        Token char_literal11=null;
        gUnitParser.option_return option9 = null;


        CommonTree OPTIONS8_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree char_literal11_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_OPTIONS=new RewriteRuleTokenStream(adaptor,"token OPTIONS");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_option=new RewriteRuleSubtreeStream(adaptor,"rule option");
        try {
            // gUnit.g:22:2: ( OPTIONS ( option ';' )+ '}' -> ^( OPTIONS ( option )+ ) )
            // gUnit.g:22:4: OPTIONS ( option ';' )+ '}'
            {
            OPTIONS8=(Token)match(input,OPTIONS,FOLLOW_OPTIONS_in_optionsSpec120);  
            stream_OPTIONS.add(OPTIONS8);

            // gUnit.g:22:12: ( option ';' )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // gUnit.g:22:13: option ';'
            	    {
            	    pushFollow(FOLLOW_option_in_optionsSpec123);
            	    option9=option();

            	    state._fsp--;

            	    stream_option.add(option9.getTree());
            	    char_literal10=(Token)match(input,29,FOLLOW_29_in_optionsSpec125);  
            	    stream_29.add(char_literal10);


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);

            char_literal11=(Token)match(input,30,FOLLOW_30_in_optionsSpec129);  
            stream_30.add(char_literal11);



            // AST REWRITE
            // elements: OPTIONS, option
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 22:30: -> ^( OPTIONS ( option )+ )
            {
                // gUnit.g:22:33: ^( OPTIONS ( option )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_OPTIONS.nextNode(), root_1);

                if ( !(stream_option.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_option.hasNext() ) {
                    adaptor.addChild(root_1, stream_option.nextTree());

                }
                stream_option.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "optionsSpec"

    public static class option_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "option"
    // gUnit.g:25:1: option : ID '=' optionValue -> ^( '=' ID optionValue ) ;
    public final gUnitParser.option_return option() throws RecognitionException {
        gUnitParser.option_return retval = new gUnitParser.option_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID12=null;
        Token char_literal13=null;
        gUnitParser.optionValue_return optionValue14 = null;


        CommonTree ID12_tree=null;
        CommonTree char_literal13_tree=null;
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_optionValue=new RewriteRuleSubtreeStream(adaptor,"rule optionValue");
        try {
            // gUnit.g:26:5: ( ID '=' optionValue -> ^( '=' ID optionValue ) )
            // gUnit.g:26:9: ID '=' optionValue
            {
            ID12=(Token)match(input,ID,FOLLOW_ID_in_option154);  
            stream_ID.add(ID12);

            char_literal13=(Token)match(input,31,FOLLOW_31_in_option156);  
            stream_31.add(char_literal13);

            pushFollow(FOLLOW_optionValue_in_option158);
            optionValue14=optionValue();

            state._fsp--;

            stream_optionValue.add(optionValue14.getTree());


            // AST REWRITE
            // elements: ID, optionValue, 31
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 26:28: -> ^( '=' ID optionValue )
            {
                // gUnit.g:26:31: ^( '=' ID optionValue )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_31.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                adaptor.addChild(root_1, stream_optionValue.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "option"

    public static class optionValue_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "optionValue"
    // gUnit.g:29:1: optionValue : ( ID | STRING );
    public final gUnitParser.optionValue_return optionValue() throws RecognitionException {
        gUnitParser.optionValue_return retval = new gUnitParser.optionValue_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set15=null;

        CommonTree set15_tree=null;

        try {
            // gUnit.g:30:5: ( ID | STRING )
            // gUnit.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set15=(Token)input.LT(1);
            if ( input.LA(1)==ID||input.LA(1)==STRING ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set15));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "optionValue"

    public static class header_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "header"
    // gUnit.g:34:1: header : '@header' ACTION -> ^( '@header' ACTION ) ;
    public final gUnitParser.header_return header() throws RecognitionException {
        gUnitParser.header_return retval = new gUnitParser.header_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal16=null;
        Token ACTION17=null;

        CommonTree string_literal16_tree=null;
        CommonTree ACTION17_tree=null;
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleTokenStream stream_ACTION=new RewriteRuleTokenStream(adaptor,"token ACTION");

        try {
            // gUnit.g:34:8: ( '@header' ACTION -> ^( '@header' ACTION ) )
            // gUnit.g:34:10: '@header' ACTION
            {
            string_literal16=(Token)match(input,32,FOLLOW_32_in_header215);  
            stream_32.add(string_literal16);

            ACTION17=(Token)match(input,ACTION,FOLLOW_ACTION_in_header217);  
            stream_ACTION.add(ACTION17);



            // AST REWRITE
            // elements: ACTION, 32
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 34:27: -> ^( '@header' ACTION )
            {
                // gUnit.g:34:30: ^( '@header' ACTION )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_32.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ACTION.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "header"

    public static class testsuite_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "testsuite"
    // gUnit.g:36:1: testsuite : ( ( DOC_COMMENT )? treeRule= ID 'walks' parserRule= ID ':' ( testcase )+ -> ^( SUITE $treeRule $parserRule ( DOC_COMMENT )? ( testcase )+ ) | ( DOC_COMMENT )? ID ':' ( testcase )+ -> ^( SUITE ID ( DOC_COMMENT )? ( testcase )+ ) );
    public final gUnitParser.testsuite_return testsuite() throws RecognitionException {
        gUnitParser.testsuite_return retval = new gUnitParser.testsuite_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token treeRule=null;
        Token parserRule=null;
        Token DOC_COMMENT18=null;
        Token string_literal19=null;
        Token char_literal20=null;
        Token DOC_COMMENT22=null;
        Token ID23=null;
        Token char_literal24=null;
        gUnitParser.testcase_return testcase21 = null;

        gUnitParser.testcase_return testcase25 = null;


        CommonTree treeRule_tree=null;
        CommonTree parserRule_tree=null;
        CommonTree DOC_COMMENT18_tree=null;
        CommonTree string_literal19_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree DOC_COMMENT22_tree=null;
        CommonTree ID23_tree=null;
        CommonTree char_literal24_tree=null;
        RewriteRuleTokenStream stream_DOC_COMMENT=new RewriteRuleTokenStream(adaptor,"token DOC_COMMENT");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_testcase=new RewriteRuleSubtreeStream(adaptor,"rule testcase");
        try {
            // gUnit.g:37:2: ( ( DOC_COMMENT )? treeRule= ID 'walks' parserRule= ID ':' ( testcase )+ -> ^( SUITE $treeRule $parserRule ( DOC_COMMENT )? ( testcase )+ ) | ( DOC_COMMENT )? ID ':' ( testcase )+ -> ^( SUITE ID ( DOC_COMMENT )? ( testcase )+ ) )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==DOC_COMMENT) ) {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==ID) ) {
                    int LA9_2 = input.LA(3);

                    if ( (LA9_2==33) ) {
                        alt9=1;
                    }
                    else if ( (LA9_2==34) ) {
                        alt9=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 9, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA9_0==ID) ) {
                int LA9_2 = input.LA(2);

                if ( (LA9_2==33) ) {
                    alt9=1;
                }
                else if ( (LA9_2==34) ) {
                    alt9=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 2, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // gUnit.g:37:4: ( DOC_COMMENT )? treeRule= ID 'walks' parserRule= ID ':' ( testcase )+
                    {
                    // gUnit.g:37:4: ( DOC_COMMENT )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==DOC_COMMENT) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // gUnit.g:37:4: DOC_COMMENT
                            {
                            DOC_COMMENT18=(Token)match(input,DOC_COMMENT,FOLLOW_DOC_COMMENT_in_testsuite234);  
                            stream_DOC_COMMENT.add(DOC_COMMENT18);


                            }
                            break;

                    }

                    treeRule=(Token)match(input,ID,FOLLOW_ID_in_testsuite239);  
                    stream_ID.add(treeRule);

                    string_literal19=(Token)match(input,33,FOLLOW_33_in_testsuite241);  
                    stream_33.add(string_literal19);

                    parserRule=(Token)match(input,ID,FOLLOW_ID_in_testsuite245);  
                    stream_ID.add(parserRule);

                    char_literal20=(Token)match(input,34,FOLLOW_34_in_testsuite247);  
                    stream_34.add(char_literal20);

                    // gUnit.g:37:55: ( testcase )+
                    int cnt6=0;
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==DOC_COMMENT) ) {
                            int LA6_2 = input.LA(2);

                            if ( (LA6_2==STRING||LA6_2==ML_STRING||LA6_2==FILENAME) ) {
                                alt6=1;
                            }


                        }
                        else if ( (LA6_0==STRING||LA6_0==ML_STRING||LA6_0==FILENAME) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // gUnit.g:37:55: testcase
                    	    {
                    	    pushFollow(FOLLOW_testcase_in_testsuite249);
                    	    testcase21=testcase();

                    	    state._fsp--;

                    	    stream_testcase.add(testcase21.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt6 >= 1 ) break loop6;
                                EarlyExitException eee =
                                    new EarlyExitException(6, input);
                                throw eee;
                        }
                        cnt6++;
                    } while (true);



                    // AST REWRITE
                    // elements: treeRule, DOC_COMMENT, testcase, parserRule
                    // token labels: parserRule, treeRule
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleTokenStream stream_parserRule=new RewriteRuleTokenStream(adaptor,"token parserRule",parserRule);
                    RewriteRuleTokenStream stream_treeRule=new RewriteRuleTokenStream(adaptor,"token treeRule",treeRule);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 38:3: -> ^( SUITE $treeRule $parserRule ( DOC_COMMENT )? ( testcase )+ )
                    {
                        // gUnit.g:38:6: ^( SUITE $treeRule $parserRule ( DOC_COMMENT )? ( testcase )+ )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(SUITE, "SUITE"), root_1);

                        adaptor.addChild(root_1, stream_treeRule.nextNode());
                        adaptor.addChild(root_1, stream_parserRule.nextNode());
                        // gUnit.g:38:36: ( DOC_COMMENT )?
                        if ( stream_DOC_COMMENT.hasNext() ) {
                            adaptor.addChild(root_1, stream_DOC_COMMENT.nextNode());

                        }
                        stream_DOC_COMMENT.reset();
                        if ( !(stream_testcase.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_testcase.hasNext() ) {
                            adaptor.addChild(root_1, stream_testcase.nextTree());

                        }
                        stream_testcase.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // gUnit.g:39:4: ( DOC_COMMENT )? ID ':' ( testcase )+
                    {
                    // gUnit.g:39:4: ( DOC_COMMENT )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==DOC_COMMENT) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // gUnit.g:39:4: DOC_COMMENT
                            {
                            DOC_COMMENT22=(Token)match(input,DOC_COMMENT,FOLLOW_DOC_COMMENT_in_testsuite275);  
                            stream_DOC_COMMENT.add(DOC_COMMENT22);


                            }
                            break;

                    }

                    ID23=(Token)match(input,ID,FOLLOW_ID_in_testsuite278);  
                    stream_ID.add(ID23);

                    char_literal24=(Token)match(input,34,FOLLOW_34_in_testsuite280);  
                    stream_34.add(char_literal24);
